Fix white border around navigation in dark mode

--- a/src/style/objects/navigation.scss
+++ b/src/style/objects/navigation.scss
@@ -13,8 +13,6 @@
     padding-left: 8px;
     padding-right: 8px;
     height: 45px;
-    border-left: 1px solid #fff;
-    border-right: 1px solid #fff;
     font-size: 20px;
 
     &.text {
